[package]
name = "dynulo_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dynulo_core"
crate-type = ["cdylib"]

[dependencies]
# arma-rs = "1.3"
arma-rs = { git = "https://github.com/brettmayson/arma-rs" }
commander = { git = "https://github.com/milsimcommander/commander" }
crossbeam-deque = "0.8"
lazy_static = "1.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7.2" 
