[package]
name = "dynulo_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dynulo_core"
crate-type = ["cdylib"]

[dependencies]
# arma-rs = "1.3"
arma-rs = { git = "https://github.com/brettmayson/arma-rs" }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-deque = "0.8"
jsonwebtoken = "7.2" 
lazy_static = "1.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
